Resolved uneven size of about images

--- a/src/css/Responsive.scss
+++ b/src/css/Responsive.scss
@@ -1,6 +1,7 @@
 @media screen and (min-width:768px) {
     .img-size{
-        height: 300px;
+        width: 100%;
+        height: 30vw;
     }
 }
 
@@ -52,8 +53,6 @@
         .navbar-brand-logo{
             width: 200px;
         }
-
-
 
         .nav-item:after{
             display: none;
